rm blackout
